# Nukoli

./: .gitignore  CMakeLists.txt  push  r
game/: CMakeLists.txt
game/assets/: Abacrazy.cas  col.cas  defaultFont.nf  eye.ncs  jake.cas  map.map  ss.ss
game/assets/sounds/: 11_After_Confession_GM.ns  50720_Gravity-falls--main-opening-theme.ns  BFG_Division.ns  ED1.ns  ED2.ns  ED7.ns  Fire_emblem_hot_talk.ns  GGXDizzy.ns  IN_THE_POOL_-_kensuke_ushio_(1).ns  Merry-Go-Round_of_Life_-_Kenzie_Smith_Piano.ns  Pokemon_ORAS_-_VS_Zinna.ns  bigGirl.ns  daddy_yankee-gasolina.ns  dual.ns  mario.ns  mem.ns  merry.ns  nds-acww-townhall-day.ns  odo.ns  regi.ns  son2g.ns  song.ns  time.ns  use.ns  vio.ns  vog.ns  vog2.ns
game/src/: main.cpp
nukoli/: CMakeLists.txt  LICENSE.md
nukoli/include/: Color.h  Debug.h  Game.h  Global.h  Koge.h  Maisi.h  Malia.h  Map.h  Nukoli.h  Rendering.h  Saisa.h  Save.h  Sprite.h  Utils.h
nukoli/src/: Debug.cpp  Global.cpp  Koge.cpp  Maisi.cpp  Malia.cpp  Map.cpp  Nukoli.cpp  Rendering.cpp  Saisa.cpp  Save.cpp  Sprite.cpp  Utils.cpp
